--- a/1922114/styleseet_2.css
+++ b/1922114/styleseet_2.css
@@ -3,21 +3,27 @@ html{
 }
 @font-face {
   font-family: "SF Pro Text";
-  src: url("font/SFProText-Regular.ttf") format("ttf");
+  src: url("font/SFProText-Regular.ttf") format("truetype");
 }
+
 @font-face {
   font-family: "SF Pro Display";
-  src: url("font/SFProDisplay-Bold.ttf") format("ttf");
+  src: url("font/SFProDisplay-Bold.ttf") format("truetype");
 }
 
 @font-face {
   font-family: "Brie";
-  src: url("font/brie.ttf") format("ttf");
+  src: url("font/brie.ttf") format("truetype");
 }
 
 @font-face {
   font-family: "Corp";
-  src: url("font/corporate.ttf") format("ttf");
+  src: url("font/corporate.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "euf";
+  src: url("font/euf.ttf") format("truetype");
 }
 header {
   height: 70px;
@@ -64,15 +70,9 @@ header {
 }
 
 .right li {
-  /*width: 93px;*/
   font-family: "SF Pro Display";
-  /*text-align: center;*/
   float: left;
   margin-left: 5vw;
-  /*position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);*/
 }
 
 .right a {
@@ -136,7 +136,7 @@ h1 {
 .main h1 {
   color: white;
   position: absolute;
-  top: 46%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
   padding-bottom: 5px;
